--- a/Lab2_tmp/Lab2_tmp.csproj
+++ b/Lab2_tmp/Lab2_tmp.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="Program2_tmp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebServer.cs" />
+    <Compile Include="WebServer_tmp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
